# Neuron

./: .env.template  .gitignore  pyproject.toml  rebuild_index.py
extension/: background.js  manifest.json  popup.html  popup.js
ios/: project.yml
ios/Neuron/: APIClient.swift  AppSettings.swift  AskView.swift  ContentView.swift  HomeView.swift  Info.plist  LibraryView.swift  NeuronApp.swift  NewsView.swift  OnboardingView.swift  SettingsView.swift  SparksView.swift
ios/Neuron.xcodeproj/: project.pbxproj
ios/Neuron.xcodeproj/project.xcworkspace/xcuserdata/ralphbetesh.xcuserdatad/: UserInterfaceState.xcuserstate
neuron/: cli.py  config.py
neuron/api/: server.py
neuron/ingestion/: apple_notes.py  audio.py  base.py  bookmarks.py  canvas.py  course_site.py  enrich_book.py  file.py  files_scanner.py  folder.py  github.py  gmail.py  goodnotes.py  goodreads.py  google_auth.py  google_calendar.py  google_drive.py  granola.py  instagram.py  kindle.py  kindle_cloud.py  letterboxd.py  netflix.py  note.py  notion.py  photos.py  pocket.py  readwise.py  rss.py  spotify.py  tiktok.py  trakt.py  twitter.py  web.py  whoop.py  youtube.py  youtube_liked.py
neuron/retrieval/: engine.py
neuron/storage/: store.py
neuron/ui/: graph.html  index.html  manifest.json
