[project]
name = "neuron"
version = "0.1.0"
description = "Personal intelligence system"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pypdf>=4.0.0",
    "python-pptx>=0.6.23",
    "trafilatura>=1.12.0",
    "spotipy>=2.23.0",
]

[project.scripts]
neuron = "neuron.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
